exports[`test should become Open after click 1`] = `
<button
  className={undefined}
  onClick={[Function]}>
  Close
</button>
`;

exports[`test should become Open after click 2`] = `
<button
  className={undefined}
  onClick={[Function]}>
  Open
</button>
`;

exports[`test should become Open after click 3`] = `
<button
  className={undefined}
  onClick={[Function]}>
  Close
</button>
`;

exports[`test with default 1`] = `
<button
  className={undefined}
  onClick={[Function]}>
  Close
</button>
`;
